# GitDB

./: .gitignore  README.md  pyproject.toml  start.sh
api/: app.py
cli/: main.py
db/: ER_diagram.md  schema.sql
engine/: __init__.py  checkout.py  db.py  diff.py  errors.py  hash.py  snapshot.py
project_documentation/: abstract.tex  database_structure.tex  implementation_plan.tex  main.tex  stack_and_feature_implementation.tex
tests/integration/: conftest.py  test_integration.py
tests/unit/: test_api.py  test_checkout.py  test_diff.py  test_hash.py  test_snapshot.py
ui/: index.html  package.json
ui/src/: App.jsx  api.js  styles.css
ui/src/components/: CommitNode.jsx  graphUtils.js
